Removing assets from list when they are deleted.